--- a/websites.html
+++ b/websites.html
@@ -131,7 +131,7 @@
               <nav>
                 <ul id="art-dynamic-menu" class="art-dynamic-menu main-menu">
                   <li class="menu-item art-cursor-scale"><a href="index.html" class="menu-link">Home</a></li>
-                  <li class="menu-item art-cursor-scale"><a href="templates.html" class="menu-link">Templates</a></li>
+                  <li class="menu-item art-cursor-scale"><a href="websites.html" class="menu-link">Websites</a></li>
                   <li class="menu-item art-cursor-scale"><a href="#" class="menu-link">Contact</a></li>
                 </ul>
               </nav>
