--- a/websites.html
+++ b/websites.html
@@ -152,31 +152,31 @@
           <div class="art-left">
             <div class="art-filter art-mb-40">
               <a href="#" data-filter="*" class="art-work-category art-current art-filter-icon art-cursor-color art-cursor-scale"><i class="fas fa-filter"></i>All Categories</a>
-              <a href="#" data-filter=".architecture" class="art-work-category art-cursor-color art-cursor-scale">Cafe</a>
+              <a href="#" data-filter=".cafe" class="art-work-category art-cursor-color art-cursor-scale">Cafe</a>
               <a href="#" data-filter=".interior" class="art-work-category art-cursor-color art-cursor-scale">Restaurant</a>
               <a href="#" data-filter=".repair" class="art-work-category art-cursor-color art-cursor-scale">Portfolio</a>
             </div>
 
             <div class="art-masonry-grid art-mb-40">
               <div class="art-grid-sizer"></div>
-              <div class="art-masonry-grid-item art-masonry-grid-item-75 architecture">
-                <div class="art-work-item"><a data-fancybox="works" href="img/projects/thumbnails/v-4.jpeg" class="art-cursor-scale art-work-cover-frame"><img src="img/projects/thumbnails/v-4.jpeg" alt="work cover">
+              <div class="art-masonry-grid-item art-masonry-grid-item-75 cafe">
+                <div class="art-work-item"><a data-fancybox="works" href="img/projects/thumbnails/cafe-desktop.png" class="art-cursor-scale art-work-cover-frame"><img src="img/projects/thumbnails/cafe-desktop.png" alt="work cover">
                     <div class="art-item-zoom art-cursor-color"><i class="fas fa-expand"></i></div>
-                    <div class="art-work-category"><span>Izzy</span></div>
+                    <div class="art-work-category"><span>MVP Cafe</span></div>
                   </a>
                   <div class="art-work-descr">
-                    <h4 class="art-cursor-color art-white"><a href="#" class="art-anima-link">Beautiful</a></h4><a href="#" class="art-cursor-scale art-work-more art-anima-link"><i class="fas fa-arrow-right"></i></a>
+                    <h4 class="art-cursor-color art-white"><a href="#" class="art-anima-link">Simple, yet beautiful</a></h4><a href="#" class="art-cursor-scale art-btn art-btn-color art-work-preview art-anima-link">Preview <i class="fas fa-arrow-right"></i></a>
                   </div>
                 </div>
               </div>
 
-              <div class="art-masonry-grid-item art-masonry-grid-item-h-x-2 repair architecture">
-                <div class="art-work-item"><a data-fancybox="works" href="img/projects/thumbnails/v-2.png" class="art-cursor-scale art-work-cover-frame"><img src="img/projects/thumbnails/v-2.png" alt="work cover">
+              <div class="art-masonry-grid-item art-masonry-grid-item-h-x-2 cafe">
+                <div class="art-work-item"><a data-fancybox="works" href="img/projects/thumbnails/cafe-mobile.png" class="art-cursor-scale art-work-cover-frame"><img src="img/projects/thumbnails/cafe-mobile.png" alt="work cover">
                     <div class="art-item-zoom art-cursor-color"><i class="fas fa-expand"></i></div>
-                    <div class="art-work-category"><span>Izzy</span></div>
+                    <div class="art-work-category"><span>MVP Cafe</span></div>
                   </a>
                   <div class="art-work-descr">
-                    <h4 class="art-cursor-color art-white"><a href="#" class="art-anima-link">Hot</a></h4><a href="#" class="art-cursor-scale art-work-more art-anima-link"><i class="fas fa-arrow-right"></i></a>
+                    <h4 class="art-cursor-color art-white"><a href="#" class="art-anima-link">Fully Responsive</a></h4><a href="#" class="art-cursor-scale art-work-more art-anima-link"><i class="fas fa-arrow-right"></i></a>
                   </div>
                 </div>
               </div>
